[project]
name = "rune-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jurgen", email = "hanekom.jurgen@bcg.com" }]
requires-python = ">=3.13"
dependencies = []

# [project.scripts]
# rune-forge = "rune_forge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
